configuration/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conf-api
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conf-api
  template:
    metadata:
      labels:
        app: conf-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: conf-api
        image: xconnected/components:conf-api-2.5
        imagePullPolicy: Always
        ports:
          - containerPort: 8001
        volumeMounts:
          - mountPath: "/media"
            name: media-volume
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: conf-api-pvc
