configuration/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conf-api
  namespace: xconnected
spec:
  selector:
    app: conf-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
