configuration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conf-api-ingress
  namespace: xconnected
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.rule: "PathPrefix(`/api-config`,`/static`)"
spec:
  rules:
  - 
    http:
      paths:
      - path: /api-config
        pathType: Prefix
        backend:
          service:
            name: conf-api
            port:
              number: 8001
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: conf-api
            port:
              number: 8001
